Tentative fix for fullscreen misalign on mobile IE.

--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,12 @@ canvas {
 	font-size: 24px;
 }
 
+#nav {
+	position: fixed;
+	top: 0;
+	right: 0;
+}
+
 #look-button {
 	-webkit-transform: rotate(180deg);
 	-moz-transform: rotate(180deg);
@@ -127,7 +133,9 @@ canvas {
 }
 
 #hud {
-	position: absolute;
+	position: fixed;
+	top: 0;
+	left: 0;
 	padding: 6px;
 	font-size: 12px;
 	text-shadow: black 0 0 2px;
